--- a/js-activities/day_greetings.html
+++ b/js-activities/day_greetings.html
@@ -19,9 +19,6 @@
             <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active disabled fw-bold" aria-current="page" href="#">You're in <code><mark>switch...case</mark></code></a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link text-light btn btn-outline-danger" href="grocery_items.html">for Loop</a>
                 </li>
                 <li class="nav-item">
@@ -36,9 +33,13 @@
                 <li class="nav-item">
                     <a class="nav-link text-light btn btn-outline-danger" href="heights_meters.html">function 3rd</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active disabled fw-bold" aria-current="page" href="#">You're in <code><mark>switch...case</mark></code></a>
+                </li>
             </ul>
             <span class="navbar-text fw-bold">
-                JS Activities - WD19P
+                JS Activities - WD19P <a class="btn btn-outline-danger btn-floating" href="https://github.com/codenimus/" target="_blank" role="button">
+                    <i class="fab fa-github"></i></a>
             </span>
             </div>
         </div>
@@ -50,28 +51,58 @@
     <div class="m-1 p-1">
         <div class="row mx-2 px-2">
             <div class="col-lg-6">
-                <h3 class="alert alert-success text-muted text-center">Hello Fellow Human Being!</h3>
-                <p>
-                  <ul class="text-start text-indent bg-danger bg-opacity-10 pt-3 pb-3 ps-5" id="todonato"></ul>
-                </p>
+                <h3 class="alert alert-success text-muted text-center">Input a Day</h3>
+                <div class=" bg-danger bg-opacity-10 shadow-lg p-5 mb-5 rounded">
+                    <div class="input-group">
+                      <input type="text" id="selectDay" class="form-control" placeholder="Enter Day" aria-label="Enter Day" aria-describedby="button-addon2">
+                      <button class="btn btn-outline-success" onclick="showDay()" type="button" id="button-addon2">Check</button>
+                    </div>
+                    <p class="pt-2" id="dayGreet"></p>
+                  </div>
             </div>
             <div class="col-lg-6">
                 <h3 class="alert alert-danger text-muted text-center">Solution</h3>
                 <code>
                 <pre class="bg-success bg-opacity-10 p-3">
-            
+        // Switch...Case
+        function showDay() {
+            let dayOfWeek = document.getElementById("selectDay").value;
+            var displayMsg;
+                  
+        switch(dayOfWeek) {
+         case "Sunday":
+            displayMsg = "It is the Lord's day! Let's go to church!";
+            break;
+         case "Monday":
+            displayMsg = "Have a good start of your week's day!";
+            break;
+         case "Tuesday":
+            displayMsg = "Way to go! You've got 3 more days before weekends!";
+            break;
+         case "Wednesday":
+            displayMsg = "Wow! It's mid-week! Are you excited for the coming sale!";
+            break;
+         case "Thursday":
+            displayMsg = "Come on, let's grab some coffee!";
+            break;
+         case "Friday":
+            displayMsg = "Today is Black Friday Sale! You gotta fill that shopping cart!";
+            break;
+         case "Saturday":
+            displayMsg = "You know the Pinoy saying when this day comes... Sabado nights! But don't stay up late...";
+            break;  
+         default:
+            displayMsg = "Can't process... Write the day properly (e.g. 'Monday')";
+        }
+            document.getElementById("dayGreet").innerHTML = displayMsg;
+        }
                 </pre>
                 </code>
             </div>
         </div>
     </div>
     </section>
-
-    <footer class="bg-success bg-gradient text-center text-light py-2">
-      © 2022 by Dhel Atienza <a class="btn btn-outline-light btn-floating" href="https://github.com/codenimus/" target="_blank" role="button">
-        <i class="fab fa-github"></i></a>
-    </footer>
-    <script src="jsexercise.js"></script>
+    <script src="js_activities.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
