--- a/js-activities/odd_even.html
+++ b/js-activities/odd_even.html
@@ -19,13 +19,13 @@
             <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active disabled fw-bold" aria-current="page" href="#">You're in <code><mark>function</mark></code> 1st</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link text-light btn btn-outline-danger" href="grocery_items.html">for Loop</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light btn btn-outline-danger" href="todolist.html">while Loop</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active disabled fw-bold" aria-current="page" href="#">You're in <code><mark>function</mark></code> 1st</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light btn btn-outline-danger" href="temp_convereter.html">function 2nd</a>
@@ -38,7 +38,8 @@
                 </li>
             </ul>
             <span class="navbar-text fw-bold">
-                JS Activities - WD19P
+                JS Activities - WD19P <a class="btn btn-outline-danger btn-floating" href="https://github.com/codenimus/" target="_blank" role="button">
+                    <i class="fab fa-github"></i></a>
             </span>
             </div>
         </div>
@@ -63,31 +64,26 @@
                 <h3 class="alert alert-danger text-muted text-center">Solution</h3>
                 <code>
                 <pre class="bg-success bg-opacity-10 p-3">
-                    function checkNum()
-                    {
-                      num = parseInt(document.getElementById("num").value);
-                      if(num)
-                      {
-                        varNum = document.getElementById("displayNum");
-                        varNum.style.display = "block";
-                        if(num%2==0)
-                          document.getElementById("adiben").innerHTML = "Even";
-                        else
-                          document.getElementById("adiben").innerHTML = "Odd";
-                      }
-                    }
+        function checkNum()
+        {
+            num = parseInt(document.getElementById("num").value);
+            if(num)
+            {
+            varNum = document.getElementById("displayNum");
+            varNum.style.display = "block";
+            if(num%2==0)
+                document.getElementById("adiben").innerHTML = "Even";
+            else
+                document.getElementById("adiben").innerHTML = "Odd";
+            }
+        }
                 </pre>
                 </code>
             </div>
         </div>
     </div>
     </section>
-
-    <footer class="bg-success bg-gradient text-center text-light py-2">
-      © 2022 by Dhel Atienza <a class="btn btn-outline-light btn-floating" href="https://github.com/codenimus/" target="_blank" role="button">
-        <i class="fab fa-github"></i></a>
-    </footer>
-    <script src="odd_even.js"></script>
+    <script src="js_activities.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
