--- a/js-activities/todolist.html
+++ b/js-activities/todolist.html
@@ -19,10 +19,10 @@
             <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active disabled fw-bold" aria-current="page" href="#">You're in <code><mark>while</mark></code> Loop</a>
+                    <a class="nav-link text-light btn btn-outline-danger" href="grocery_items.html">for Loop</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light btn btn-outline-danger" href="grocery_items.html">for Loop</a>
+                    <a class="nav-link active disabled fw-bold" aria-current="page" href="#">You're in <code><mark>while</mark></code> Loop</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light btn btn-outline-danger" href="odd_even.html">function 1st</a>
@@ -38,7 +38,7 @@
                 </li>
             </ul>
             <span class="navbar-text fw-bold">
-                JS Activities - WD19P
+                JS Activities - WD19P <a class="btn btn-outline-danger btn-floating" href="https://github.com/codenimus/" target="_blank" role="button"> <i class="fab fa-github"></i></a>
             </span>
             </div>
         </div>
@@ -51,9 +51,9 @@
         <div class="row mx-2 px-2">
             <div class="col-lg-6">
                 <h3 class="alert alert-success text-muted text-center">Things To Do Everyday</h3>
-                <p>
-                  <ol class="text-start text-indent bg-danger bg-opacity-10 pt-3 pb-3 ps-5 shadow-lg rounded" id="todonato"></ol>
-                </p>
+                <div class="bg-danger bg-opacity-10 shadow-lg p-3 mb-5 rounded">
+                    <ol class="text-start text-indent pt-3 pb-3 ps-5" id="todonato"></ol>
+                  </div>
             </div>
             <div class="col-lg-6">
                 <h3 class="alert alert-danger text-muted text-center">Solution</h3>
@@ -75,11 +75,6 @@
         </div>
     </div>
     </section>
-
-    <footer class="bg-success bg-gradient text-center text-light py-2">
-      © 2022 by Dhel Atienza <a class="btn btn-outline-light btn-floating" href="https://github.com/codenimus/" target="_blank" role="button">
-        <i class="fab fa-github"></i></a>
-    </footer>
     <script src="todolist.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
